openmolar (0.3.1+bzr0774-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 26 Oct 2012 00:21:25 +0100


openmolar (0.3.0+bzr0773-0~__DIST__0) __DIST__; urgency=low

  * python2.6 fix (cursor.executemany is broken?)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 23 Oct 2012 14:31:05 +0100


openmolar (0.3.0+bzr0772-0~__DIST__0) __DIST__; urgency=low

  * ability to edit today's notes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 22 Oct 2012 18:39:15 +0100


openmolar (0.3.0+bzr0771-0~__DIST__0) __DIST__; urgency=low

  * re-introduced system dat into the formatted notes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 22 Oct 2012 10:29:18 +0100


openmolar (0.3.0+bzr0770-0~__DIST__0) __DIST__; urgency=low

  * ui tweaks

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 20 Oct 2012 01:50:56 +0100


openmolar (0.2.3+bzr0769-0~__DIST__0) __DIST__; urgency=low

  * upstream tweak

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 19 Oct 2012 17:52:37 +0100


openmolar (0.2.3+bzr0768-0~__DIST__0) __DIST__; urgency=low

  * new upstream version with a significant schema change

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 19 Oct 2012 17:36:59 +0100


openmolar (0.2.2+bzr0766-0~__DIST__0) __DIST__; urgency=low

  * new upstream version

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 03 Oct 2012 23:04:56 +0100


openmolar (0.2.2+bzr0765-0~__DIST__0) __DIST__; urgency=low

  * new upstream version

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 28 Sep 2012 12:32:00 +0100


openmolar (0.2.2+bzr0763-0~__DIST__0) __DIST__; urgency=low

  * new upstream version

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 19 Sep 2012 22:54:16 +0100


openmolar (0.2.2+bzr0762-0~__DIST__0) __DIST__; urgency=low

  * new upstream version

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sun, 05 Aug 2012 09:44:33 +0100


openmolar (0.2.2+bzr0761-0~__DIST__0) __DIST__; urgency=low
