@@ -27,8 +27,8 @@ table{width:100%;}
 
 .date{background-color:#ffeedd}
 .ops{background-color:#dddddd;}
-.tx{background-color:#aaaaaa}
-.notes{background-color:#dddddd; width:70%}
+.tx{background-color:#aaaaaa;}
+.notes{background-color:#dddddd; width:50%}
 .reception{background-color:#eeeeee;}
 .verbose{background-color:#ddeeff}
 
