@@ -1,3 +1,10 @@
+openmolar (0.3.1+bzr0775-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 26 Oct 2012 01:31:51 +0100
+
+
 openmolar (0.3.1+bzr0774-0~__DIST__0) __DIST__; urgency=low
 
   * upstream release
